--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,4 +36,6 @@ Imports
 @import "_header.scss";
 @import "_content.scss";
 @import "_videos.scss";
+@import "_newsletterForm.scss";
+@import "_contests.scss";
 @import "_footer.scss";
