--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -28,6 +28,18 @@ body {
   font-family: $natBaseFontFamily;
 }
 
+b, strong {
+  font-weight: bold;
+}
+
+i, em {
+  font-style: italic;
+}
+
+button {
+  @extend %button;
+}
+
 .box {
   @extend %normal-margin;
   @extend %border-box;
