--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -58,6 +58,18 @@ div[class*='box-'] {
     }
   }
 }
+.box-255 {
+  width: 255px;
+  margin-bottom: 20px;
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 7px;
+  }
+}
+
 .box-full {
   width: 100%;
 }
+
+
