--- a/sass/_videos.scss
+++ b/sass/_videos.scss
@@ -6,6 +6,7 @@
     margin-bottom: 15px;
     margin-right: 15px;
     overflow: hidden;
+    cursor: pointer;
 
     &:nth-child(3n+3) {
       margin-right: 0;
@@ -21,7 +22,17 @@
         bottom: 1px;
         font-size: 1.3em;
         font-weight: bold;
+        padding: 10px;
       }
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      width: 208px;
+      height: 156px;
+      background: url("../images/videos/video-overlay.png");
+      z-index: 1;
+      top: 0;
     }
   }
 }
