added left ribbon overlay

--- a/sass/_videos.scss
+++ b/sass/_videos.scss
@@ -1,4 +1,11 @@
-.videos {
+#videos {
+  h2 {
+    position: relative;
+    &:before {
+      @extend %blueLeft;
+    }
+  }
+
   li {
     position: relative;
     display: block;
