--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,7 @@ Imports
 ========================================================================== */
 @import "_carousel.scss";
 @import "_header.scss";
+@import "_categories.scss";
 @import "_content.scss";
 @import "_videos.scss";
 @import "_newsletterForm.scss";
