--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -87,3 +87,7 @@ images
 img, object, embed {
   max-width: $natRowWidth; //prevent images from going beyond the viewport
 }
+
+.clearfix {
+  clear: both;
+}
