--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -28,6 +28,7 @@
       font-size: 2.4em;
       color: $natTextColor;
       font-weight: bold;
+      background-color: transparent;
     }
     p {
       font-size: 1.4em;
