--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -20,11 +20,14 @@
   position: relative;
   top: -4px;
   padding: 20px;
-  overflow: hidden;
 
   .lcol {
     width: 666px;
     float: left;
+  
+    h2 {
+      @extend %blueRibbon;
+    }
   }
   .rcol {
     float: right;
@@ -41,11 +44,16 @@
 div[class*='box-'] {
   float: left;
 }
-.box-195 {
-  width: 195px;
+.box-185 {
+  width: 185px;
 }
-.box-470 {
-  width: 470px;
+
+.box-20 {
+  width: 20px;
+}
+
+.box-460 {
+  width: 460px;
 
   article {
     clear: both;
