--- a/sass/partials/_type.scss
+++ b/sass/partials/_type.scss
@@ -82,6 +82,7 @@ h1 {
 } 
 
 h2 {
+  position: relative;
   font-size: 1.2em;
   text-transform: uppercase;
   margin-top: 20px;
@@ -92,7 +93,7 @@ h3 {
   font-size: 1.4em;
   color: $natTextColor;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 h4 {
