done just need to browser test

--- a/sass/_newsletterForm.scss
+++ b/sass/_newsletterForm.scss
@@ -15,6 +15,9 @@
  --------------------------------------------------------------------------------------------------------------------- */
 
 #newsletter {
+  h2 {
+    text-indent: 20px;
+  }
   input[type=email] {
     width: 96%;
     border: 0;
