--- a/sass/_contests.scss
+++ b/sass/_contests.scss
@@ -15,6 +15,9 @@
  --------------------------------------------------------------------------------------------------------------------- */
 
 #contests {
+  h2 {
+    text-indent: 20px;
+  }
   section {
     clear: both;
   }
