--- a/sass/_categories.scss
+++ b/sass/_categories.scss
@@ -14,7 +14,7 @@
  This file is responsible for categories navigation styles on the NAT app.
  --------------------------------------------------------------------------------------------------------------------- */
 
-#categories {
+#section-category {
   h2 {
     text-indent: 0;
     &:after {
