--- a/sass/_newsletterForm.scss
+++ b/sass/_newsletterForm.scss
@@ -14,7 +14,7 @@
  This file is responsible for the right column Newsletter styles on the NAT app.
  --------------------------------------------------------------------------------------------------------------------- */
 
-#newsletter {
+#section-newsletter {
   h2 {
     text-indent: 20px;
   }
@@ -25,7 +25,7 @@
     @include box-shadow (inset 0 0 8px  rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1)); 
     margin-bottom: 10px;
   } 
-  legend {
+  fieldset {
     padding: 10px;
     background-color: #cac9c9;
     margin-bottom: 9px;
