--- a/sass/_carousel.scss
+++ b/sass/_carousel.scss
@@ -55,7 +55,7 @@
         margin-left: 0;
       }
       &:last-child {    }
-      &:hover {
+      &:hover, &.cycle-pager-active {
         border: 3px solid #0084d9;
         
         &:after {
