--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,9 +7,9 @@
 
  @twitter: zkm
 
- @copyright: COPYRIGHT 6-3-2014
+ @copyright: COPYRIGHT 6-20-2014
  =============================================================================
- Filename: _type.scss
+ Filename: _header.scss
  =============================================================================
  This file is responsible for the header elements on the nat app.
  --------------------------------------------------------------------------------------------------------------------- */
