--- a/sass/main.scss
+++ b/sass/main.scss
@@ -40,3 +40,8 @@ Imports
 @import "_newsletterForm.scss";
 @import "_contests.scss";
 @import "_footer.scss";
+
+/* =============================================================================
+ IE Fixes
+========================================================================== */
+@import "_ie.scss";
