--- a/sass/_newsletterForm.scss
+++ b/sass/_newsletterForm.scss
@@ -15,37 +15,37 @@
  --------------------------------------------------------------------------------------------------------------------- */
 
 #section-newsletter {
-  h2 {
-    text-indent: 20px;
-  }
-  input[type=email] {
-    width: 96%;
-    border: 0;
-    padding: 5px;
-    @include box-shadow (inset 0 0 8px  rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1)); 
-    margin-bottom: 10px;
-  } 
-  fieldset {
-    padding: 10px;
-    background-color: #cac9c9;
-    margin-bottom: 9px;
-    p {
-      font-size: 1.2em;
-    }
-    label {
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-  }
-  button {
-    float: right;
-  }
+	h2 {
+		text-indent: 20px;
+	}
+	input[type=email] {
+		width: 96%;
+		border: 0;
+		padding: 5px;
+		@include box-shadow (inset 0 0 8px rgba(0,0,0,0.1), 0 0 16px rgba(0,0,0,0.1));
+		margin-bottom: 10px;
+	}
+	fieldset {
+		padding: 10px;
+		background-color: $natBackgroundColor;
+		margin-bottom: 9px;
+		p {
+			font-size: 1.2em;
+		}
+		label {
+			font-weight: bold;
+			font-size: 1.2em;
+		}
+	}
+	button {
+		float: right;
+	}
 
-  footer {
-  background-color: #cac9c9;
-  padding: 7px;
-  text-align: center;
-  border-top: 1px solid #969696;
-  font-size: 1.2em;
-  }
+	footer {
+		background-color: $natBackgroundColor;
+		padding: 7px;
+		text-align: center;
+		border-top: 1px solid $natBorderColor;
+		font-size: 1.2em;
+	}
 }
