--- a/sass/partials/_type.scss
+++ b/sass/partials/_type.scss
@@ -16,113 +16,113 @@
 
 // SVG Icons
 @font-face {
-  font-family: 'icons-nat';
-  src: url('../font/icons-nat.eot?87595602');
-  src: url('../font/icons-nat.eot?87595602#iefix') format('embedded-opentype'),
-       url('../font/icons-nat.woff?87595602') format('woff'),
-       url('../font/icons-nat.ttf?87595602') format('truetype'),
-       url('../font/icons-nat.svg?87595602#icons-nat') format('svg');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'icons-nat';
+	src: url('../font/icons-nat.eot?87595602');
+	src: url('../font/icons-nat.eot?87595602#iefix') format('embedded-opentype'),
+		url('../font/icons-nat.woff?87595602') format('woff'), url('../font/icons-nat.ttf?87595602') format('truetype'),
+		url('../font/icons-nat.svg?87595602#icons-nat') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
- [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "icons-nat";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  position: absolute;
-  z-index: 2;
-  // opacity: .8;
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
-     
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  font-size: 165%;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+	font-family: "icons-nat";
+	font-style: normal;
+	font-weight: normal;
+	speak-as: none;
+	display: inline-block;
+	text-decoration: inherit;
+	width: 1em;
+	margin-right: .2em;
+	text-align: center;
+	position: absolute;
+	z-index: 2;
+	// opacity: .8;
+
+	/* For safety - reset parent styles, that can break glyph codes*/
+	font-variant: normal;
+	text-transform: none;
+
+	/* fix buttons height, for twitter bootstrap */
+	line-height: 1em;
+
+	/* Animation center compensation - margins should be symmetric */
+	/* remove if not needed */
+	margin-left: .2em;
+
+	/* you can be more comfortable with increased icons size */
+	font-size: 165%;
+
+	/* Uncomment for 3D effect */
+	/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.icon-search:before { content: '\e800'; } /* '' */
+
+.icon-search:before {
+	content: '\e800';
+} /* '' */
 .icon-categories:before {
-  content: '\e801'; 
-  left: -22px;
+	content: '\e801';
+	left: -22px;
 }
 .icon-articles:before {
-  content: '\e802';
-  left: -15px;
+	content: '\e802';
+	left: -15px;
 }
 .icon-signup:before {
-  content: '\e803';
-  left: -25px;
-  top: -1px;
+	content: '\e803';
+	left: -25px;
+	top: -1px;
 }
 .icon-contests:before {
-  content: '\e804';
-  left: -25px;
-  top: -1px;
+	content: '\e804';
+	left: -25px;
+	top: -1px;
 }
 .icon-video:before {
-  content: "";
-  background: url("../images/videos/videocam.gif") no-repeat;
-  left: -24px;
-  width: 18px;
-  height: 14px;
+	content: "";
+	background: url("../images/videos/videocam.gif") no-repeat;
+	left: -24px;
+	width: 18px;
+	height: 14px;
 }
 
 /* Type */
 #{headings(all)} {
-  font-weight: $natHeadingFontWeight;
+	font-weight: $natHeadingFontWeight;
 }
 
-ul, ol, dl {
-  padding-left: $natPadding;
-  @extend %normal-margin-top-bottom !optional;
+ul,
+ol,
+dl {
+	padding-left: $natPadding;
+	@extend %normal-margin-top-bottom !optional;
 }
 
-h1, h2, h3, h4, h5 {
-  display: block;
-  font-weight: bold;
+h1,
+h2,
+h3,
+h4,
+h5 {
+	display: block;
+	font-weight: bold;
 }
-
-h1 {
-
-} 
 
 h2 {
-  position: relative;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  margin-top: 20px;
-  margin-bottom: 20px;
+	position: relative;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 h3 {
-  font-size: 1.4em;
-  color: $natTextColor;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-
-h4 {
-
+	font-size: 1.4em;
+	color: $natTextColor;
+	margin-top: 20px;
+	margin-bottom: 5px;
 }
 
 p {
-  font-size: 1.4em;
+	font-size: 1.4em;
 }
